--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.10",
+    "mockjs": "^1.0.1-beta3",
     "pug": "^2.0.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
